--- a/src/app/contacts/list/list.component.html
+++ b/src/app/contacts/list/list.component.html
@@ -1,3 +1,17 @@
-<p>
-  list works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-4" *ngFor="let contact of contacts | async">
+      <div class="card mt-2">
+        <div class="card-body">
+          <h5 class="card-title">Nome: {{contact.name}}</h5>
+          <p class="card-text">E-mail: {{contact.email}}</p>
+          <p class="card-text">Telefone: {{contact.phone}}</p>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="btn btn-secondary" (click)="edit(contact, contact.key)">Editar</button>
+          <button type="button" class="btn btn-danger ml-2" (click)="delete(contact.key)">Excluir</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
